# xcsc-tushare-mcp-http

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  TEST_RESULTS.md  docker-compose.yml  pyproject.toml  requirements.txt  simple_test.py  test_api_calls.py
examples/: UVX_SETUP_GUIDE.md  mcp-config-stdio-local.json  mcp-config-stdio.json  mcp-config.json  start-with-uvx.bat  start-with-uvx.sh
references/债券/: 可转债有条件赎回价格和触发比例.md
references/公募基金/: 基金持仓.md
references/共同基金/: 中国共同基金业绩比较基准行情.md  中国共同基金投资组合——持券明细.md  中国共同基金投资组合——持股明细.md  中国共同基金投资组合——资产配置.md
references/期货/: 仓单日报.md  期货合约信息.md
references/沪深股票/基础数据/: 上市公司管理层.md  中国A股基本资料.md  中国A股证券曾用名.md  交易日历.md  管理层薪酬和持股.md
references/沪深股票/市场参考数据/: 前十大股东.md  港股通十大成交股.md  股权质押明细数据.md  股票开户数据.md  融资融券交易明细.md
references/沪深股票/行情数据/: 中国A股日行情.md  分钟数据.md  周线行情.md  每日涨跌停价格.md  港股通每日成交统计.md  股票复权因子.md
references/沪深股票/财务数据/: 业绩快报.md
src/xcsc_tushare_mcp/: __init__.py  __main__.py  api_metadata.json  auth.py  config.py  metadata.py  server.py  tools.py
src/xcsc_tushare_mcp/references/债券/: 可转债发行.md  可转债发行（备选）.md
src/xcsc_tushare_mcp/references/公募基金/: 基金持仓.md  基金经理.md  基金行情.md  基金规模.md
src/xcsc_tushare_mcp/references/共同基金/: 中国共同基金基本资料.md  中国共同基金基金经理.md  中国共同基金投资组合——其他证券.md
src/xcsc_tushare_mcp/references/指数/: A股指数成份股.md  A股指数日行情.md  大盘指数每日指标.md  市场每日交易统计.md  指数周线行情.md  指数成分和权重.md
src/xcsc_tushare_mcp/references/期货/: 每日持仓排名.md  每日结算参数.md
src/xcsc_tushare_mcp/references/沪深股票/基础数据/: 中国A股公司简介.md
src/xcsc_tushare_mcp/references/沪深股票/市场参考数据/: 前十大流通股东.md  大宗交易.md  概念股分类表.md  概念股明细列表.md  股东人数.md  股东增减持.md  股权质押统计数据.md  股票开户数据（旧）.md  龙虎榜机构明细.md  龙虎榜每日明细.md
src/xcsc_tushare_mcp/references/沪深股票/行情数据/: A股停复牌信息.md  个股资金流向.md  每日指标.md  沪深港股通持股明细.md  沪深港通资金流向.md  港股通每月成交统计.md
src/xcsc_tushare_mcp/references/沪深股票/财务数据/: 分红送股.md  现金流量表.md  资产负债表.md  重要财务指标.md
src/xcsc_tushare_mcp_http/: __init__.py  __main__.py  api_metadata.json  auth.py  config.py  metadata.py  server.py  tools.py
src/xcsc_tushare_mcp_http/references/债券/: 中国债券基本资料.md  可转债基本信息.md  可转债强制赎回信息.md  可转债有条件回售价格和触发比例.md  可转债行情.md
src/xcsc_tushare_mcp_http/references/公募基金/: 基金净值.md  基金分红.md  基金列表.md  基金管理人.md
src/xcsc_tushare_mcp_http/references/共同基金/: 中国Wind基金分类.md  中国共同基金净值.md  中国共同基金投资组合——行业配置.md
src/xcsc_tushare_mcp_http/references/指数/: 指数月线行情.md  深圳市场每日交易概况.md
src/xcsc_tushare_mcp_http/references/期权/: 期权合约信息.md  期权日线行情.md
src/xcsc_tushare_mcp_http/references/期货/: 期货主力与连续合约.md  期货日线行情.md
src/xcsc_tushare_mcp_http/references/沪深股票/市场参考数据/: 股票回购.md  融资融券交易汇总.md
src/xcsc_tushare_mcp_http/references/沪深股票/行情数据/: 月线行情.md  沪深股通十大成交股.md  涨跌停和炸板数据.md  港股通(沪)每日成交.md
src/xcsc_tushare_mcp_http/references/沪深股票/财务数据/: 业绩预告.md  主营业务构成.md  利润表.md  财务审计意见.md  财报披露计划.md
xcsc_tushare_mcp_http/: __init__.py  __main__.py  auth.py  config.py  server.py
xcsc_tushare_mcp_http/tools/: __init__.py  base.py  bond.py  common.py  fund.py  futures.py  index.py  mutual_fund.py  option.py  stock.py  stock_finance.py  stock_market.py  stock_quote.py
