[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xcsc-tushare-mcp-http"
version = "1.0.1"
description = "XCSC Tushare MCP Server with HTTP transport for financial data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "HanjunDu", email = "hanjun.du@outlook.com"}
]
keywords = ["xcsc-tushare", "mcp", "financial", "stock", "http", "tushare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.3.0",
    "xcsc-tushare>=1.0.0",
    "pandas>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[project.scripts]
xcsc-tushare-mcp-http = "xcsc_tushare_mcp_http.server:main"

[project.urls]
Homepage = "https://github.com/duhanjun/xcsc-tushare-mcp-http"
Documentation = "https://github.com/duhanjun/xcsc-tushare-mcp-http#readme"
Repository = "https://github.com/duhanjun/xcsc-tushare-mcp-http.git"
Issues = "https://github.com/duhanjun/xcsc-tushare-mcp-http/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xcsc_tushare_mcp_http = ["py.typed", "api_metadata.json", "references/**/*.md"]
